--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do-list</title>
     <script src = "app.js"></script>
 </head>
 <body>
-    
+    <h1>To Do list</h1>
+    <h2>Available requests</h2>
+    <h3>Enter 'list' to view pending tasks</h3>
+    <h3>Enter 'add' to add new task</h3>
+    <h3>Enter 'delete' to delete tasks</h3>
+    <h3>Enter 'exit' to exit to-do list</h3>
 </body>
 </html>
